--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 JWT_SECRET_KEY=my-secret
-JWT_EXPIRATION_MILLIS=1000
+JWT_ACCESS_TTL_SEC=60
+REFRESH_TOKEN_TTL_SEC=120
 PORT=8080
 DSN="host=localhost user=go-jwt-auth-rest-api password=12121212 dbname=go-jwt-auth-db port=5432 sslmode=disable"
