--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ JWT_ACCESS_TTL_SEC=60
 REFRESH_TOKEN_TTL_SEC=120
 PORT=8080
 DSN="host=localhost user=go-jwt-auth-rest-api password=12121212 dbname=go-jwt-auth-db port=5432 sslmode=disable"
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
