--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 JWT_SECRET_KEY=my-secret
-JWT_ACCESS_TTL_SEC=60
+ACCESS_TOKEN_TTL_SEC=60
 REFRESH_TOKEN_TTL_SEC=120
 PORT=8080
 DSN="host=localhost user=go-jwt-auth-rest-api password=12121212 dbname=go-jwt-auth-db port=5432 sslmode=disable"
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+DOMAIN=http://localhost:8080
