--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ REFRESH_TOKEN_TTL_SEC=120
 PORT=8080
 DSN="host=localhost user=go-jwt-auth-rest-api password=12121212 dbname=go-jwt-auth-db port=5432 sslmode=disable"
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
-DOMAIN=http://localhost:8080
+DOMAIN=localhost
