--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-JWT_SECRET_KEY=my-secret
+#  Private RSA key in base64
+JWT_PRIVATE_KEY=my-secret1123
 ACCESS_TOKEN_TTL_SEC=60
 REFRESH_TOKEN_TTL_SEC=120
 PORT=8080
