feat: add githun oauth

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,13 @@
 JWT_PRIVATE_KEY=my-secret1123
 ACCESS_TOKEN_TTL_SEC=60
 REFRESH_TOKEN_TTL_SEC=120
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
 PORT=8080
 DSN="host=localhost user=go-jwt-auth-rest-api password=12121212 dbname=go-jwt-auth-db port=5432 sslmode=disable"
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 DOMAIN=localhost
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
